--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
       <section class="systems">
         <div class="system" data-aos="fade-up" data-aos-delay="150">
           <img
-            src="assets/img/conceito-de-rpa-com-tela-de-toque-de-mao-embacada.jpg"
+            src="assets/img/gestao-metas-indicadores.jpg"
             alt="metas-indicadores"
           />
           <div class="system-info">
+            <h3>Gestão de Metas e Indicadores</h3>
             <p>
               Ferramenta que ajuda às organizações a definir e acompanhar suas
               metas e indicadores individuais e coletivos de desempenho,
@@ -119,10 +120,11 @@
         </div>
         <div class="system" data-aos="fade-up" data-aos-delay="250">
           <img
-            src="assets/img/conceito-de-rpa-com-tela-de-toque-de-mao-embacada.jpg"
+            src="assets/img/precificacao-inteligente.jpg"
             alt="metas-indicadores"
           />
           <div class="system-info">
+            <h3>Precificação Inteligente</h3>
             <p>
               Estratégia de precificação que utiliza dados e tecnologia para
               ajustar preços de produtos ou serviços com base em fatores
@@ -135,10 +137,11 @@
         </div>
         <div class="system" data-aos="fade-up" data-aos-delay="400">
           <img
-            src="assets/img/conceito-de-rpa-com-tela-de-toque-de-mao-embacada.jpg"
+            src="assets/img/omnichannel.jpg"
             alt="metas-indicadores"
           />
           <div class="system-info">
+            <h3>Atendimento omnichannel com telefonia integrada</h3>
             <p>
               A grande vantagem do atendimento omnichannel, é, sem dúvidas, a
               possibilidade de oferecer a melhor experiência de atendimento ao
