Add effects AOS.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <a href="https://www.facebook.com/habilis.moc" target="_blank">
               <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/company/habilis-consultoria-e-solucoes/" target="_blank">
+            <a
+              href="https://www.linkedin.com/company/habilis-consultoria-e-solucoes/"
+              target="_blank"
+            >
               <i class="fa-brands fa-linkedin fa-2x"></i>
             </a>
           </div>
@@ -136,10 +139,7 @@
           </div>
         </div>
         <div class="system" data-aos="fade-up" data-aos-delay="400">
-          <img
-            src="assets/img/omnichannel.jpg"
-            alt="metas-indicadores"
-          />
+          <img src="assets/img/omnichannel.jpg" alt="metas-indicadores" />
           <div class="system-info">
             <h3>Atendimento omnichannel com telefonia integrada</h3>
             <p>
@@ -165,10 +165,22 @@
         </p>
       </div>
       <div class="clients-logo">
-        <img src="assets/img/logo-minas-brasil.svg" alt="logo minas brasil" />
-        <img src="assets/img/logo-tintacon.jpg" alt="logo tintacon" />
-        <img src="assets/img/logo-fastcorte.png" alt="logo fastcorte" />
-        <img src="assets/img/logo-vox.png" alt="logo vox" />
+        <img
+          src="assets/img/logo-minas-brasil.svg"
+          alt="logo minas brasil"
+          data-aos="zoom-in"
+        />
+        <img
+          src="assets/img/logo-tintacon.jpg"
+          alt="logo tintacon"
+          data-aos="zoom-in"
+        />
+        <img
+          src="assets/img/logo-fastcorte.png"
+          alt="logo fastcorte"
+          data-aos="zoom-in"
+        />
+        <img src="assets/img/logo-vox.png" alt="logo vox" data-aos="zoom-in" />
       </div>
     </section>
     <section class="partnership">
@@ -186,8 +198,12 @@
           href="https://www.habilis.eng.br"
           target="_blank"
           class="partnership-button"
-          >Seja um parceiro</a
+          data-aos="fade-down"
+          data-aos-easing="linear"
+          data-aos-duration="1500"
         >
+          Seja um parceiro
+        </a>
       </div>
       <div class="contacts">
         <h2>Contatos</h2>
@@ -215,7 +231,10 @@
         <a href="https://www.facebook.com/habilis.moc" target="_blank">
           <i class="fa-brands fa-facebook fa-2x"></i>
         </a>
-        <a href="https://www.linkedin.com/company/habilis-consultoria-e-solucoes/" target="_blank">
+        <a
+          href="https://www.linkedin.com/company/habilis-consultoria-e-solucoes/"
+          target="_blank"
+        >
           <i class="fa-brands fa-linkedin fa-2x"></i>
         </a>
       </div>
